# checklist-experiments

./: README.md  Untitled.ipynb  airline.ipynb  pyproject.toml
checklist_experiments/: bert.py  prepare_dataset.py  split_dataset.py  train_ft.py
notebooks/: eda.ipynb
