[tool.poetry]
name = "checklist-experiments"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
scikit-learn = "^0.23.2"
numpy = "^1.19.2"
pandas = "^1.1.3"
checklist = "^0.0.10"
torch = "^1.6.0"
transformers = "^3.3.1"
datasets = "^1.1.2"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
